# SDR-Scanner

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  VERSION.md
.github/workflows/: build.yml  release.yml
lib/: README.md
resources/: sdr-scanner.desktop
src/: main.cpp
src/core/: ActivityLogModel.cpp  ActivityLogModel.h  AudioOutput.cpp  AudioOutput.h  ChannelProcessor.cpp  ChannelProcessor.h  DebugLog.cpp  DebugLog.h  Decimator.cpp  Decimator.h  FirDesign.cpp  FirDesign.h  Frequency.cpp  Frequency.h  FrequencyListModel.cpp  FrequencyListModel.h  FrequencyListStore.cpp  FrequencyListStore.h  HumFilter.cpp  HumFilter.h  ScanEngine.cpp  ScanEngine.h  ScanGroup.cpp  ScanGroup.h  ScannerState.h  Squelch.cpp  Squelch.h  SquelchCalibrator.cpp  SquelchCalibrator.h
src/sdr/: ISdrDevice.h  RtlSdrDevice.cpp  RtlSdrDevice.h  SdrDeviceManager.cpp  SdrDeviceManager.h
src/ui/: ActivityLogWidget.cpp  ActivityLogWidget.h  AddFrequencyDialog.cpp  AddFrequencyDialog.h  DeviceBar.cpp  DeviceBar.h  ExploreDialog.cpp  ExploreDialog.h  FrequencyTableView.cpp  FrequencyTableView.h  LcdPanel.cpp  LcdPanel.h  MainWindow.cpp  MainWindow.h  SignalStripChart.cpp  SignalStripChart.h
